--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -7,23 +7,26 @@
 <body>
 
 <h2>Auto Parts</h2>
-<p>Please select one item for your DeLorian from the drop-down list:</p>
+<p>Please select <strong>one item for your DeLorian</strong> from the drop-down list:</p>
 
 <form action="/>action_page.php">
     <select name="parts">
-
-
-        <option value="battery">battery</option>
-        <option value="brake disc">brake disc
-        <option value="drive belt">drive belt</option>
-
-        <option value="engine oil">engine oil</option>
-        <option value="light bulbs">light bulbs</option>
-        <option value="spark plug">spark plug</option>
-        <option value="tires">tires</option>
-        <option value="windshield wipers">windshield wipers</option>
-
+        <option value=""></option>
+        <option value="battery">battery ($ 135.00 / battery)</option>
+        <option value="brake disc">brake disc ($ 30.00 / disk)
+        <option value="drive belt">drive belt ($ 10.00 / belt)</option>
+        <option value="engine oil">engine oil ($ 25.00 / liter)</option>
+        <option value="light bulbs">light bulbs ($ 2.00 / bulb)</option>
+        <option value="spark plug">spark plug ($ 8.00 / plug)</option>
+        <option value="tires">tires ($ 85.00 / tire)</option>
+        <option value="windshield wipers">windshield wipers ($ 12.00 / 2-pack)</option>
     </select>
+
+    Quantity (between 1 and 10):
+    <input type="number" name="quantity" min="1" max="10">
+
+
+
     <br><br>
     <input type="submit">
 
