--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+
+<div>
+
 <h2>Auto Parts</h2>
 <p>Please select <strong>one item for your DeLorian</strong> from the drop-down list:</p>
 
@@ -22,9 +25,10 @@
         <option value="windshield wipers">windshield wipers ($ 12.00 / 2-pack)</option>
     </select>
 
+    <p>
     Quantity (between 1 and 10):
     <input type="number" name="quantity" min="1" max="10">
-
+    </p>
 
 
     <br><br>
@@ -32,5 +36,8 @@
 
 </form>
 
+
+
+</div>
 </body>
 </html>
