Finished adding form fields for checkout and added validation to shipping info and checkout

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -24,12 +24,12 @@
         </header>
         <div>
 
-            <h2>Auto Parts</h2>
+            <h2>Shopping Cart</h2>
             <p>Please select <strong>one item for your DeLorian</strong> from the drop-down list:</p>
 
             <form action="/>action_page.php">
                 <fieldset>
-                    <legend>Auto Parts</legend>
+                    <legend><h3>Auto Parts</h3></legend>
                 <select name="parts">
                     <option value=""></option>
                     <option value="battery">battery ($ 135.00 / battery)</option>
