revised shopping_cart

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -25,7 +25,8 @@
         <div>
 
             <h2>Shopping Cart</h2>
-            <p>Please select <strong>one item for your DeLorian</strong> from the drop-down list:</p>
+            <p>Please select <strong>one item for your car</strong>
+                from the drop-down list to add it to the shopping cart:</p>
 
             <form action="/>action_page.php">
                 <fieldset>
