blank field for states

--- a/user_info.html
+++ b/user_info.html
@@ -45,6 +45,7 @@
 					<td><input type="text" name="city" maxlength="100"></td>
 					<td><font size = 5>State:  </font></td>
 					<td><select>
+						<option value=""></option>
 					    <option value="AL">AL</option>
 					    <option value="AK">AK</option>
 					    <option value="AZ">AZ</option>
