--- a/user_info.html
+++ b/user_info.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     
-    <head>
+     <head>
         <meta charset="UTF-8">
         <title>User Information</title>
         <link rel="stylesheet" type="text/css" href="">
@@ -29,7 +29,9 @@
 			<br><br><br><br>
             <h2><center>User Information</center></h2>
 			<br><br><br><br><br>
-			<center><table>
+		<fieldset>
+                <legend class="form-name"><h3>User Information</h3></legend>
+			    <table>
 				<tr>
 					<td><font size = 5>Full Name:</font></td>
 					<td><input type="text" name="fulname" maxlength="100"></td>
@@ -107,8 +109,11 @@
 				<tr>
 					<td><font size = 5>Email:  </font></td>
 					<td><input type="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="100" title="Not a Valid Email Address" required></td>
-			</table></center>
-			<center><input type="submit"></center>
+			</table>
+			<br>
+			<input type="submit">
+		</fieldset>
         </form>
+            
     </body>
-    </body>
+</html>
