Zip code mouseover

--- a/user_info.html
+++ b/user_info.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title>User Information</title>
         <link rel="stylesheet" type="text/css" href="">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="styleshee  t">
     </head>
     
     <body>
@@ -101,7 +101,7 @@
 				</tr>
 				<tr>
 					<td><font size = 5>Zip Code:  </font></td>
-					<td><input type="text" name="zip" minlength="5" maxlength="9"></td>
+					<td><input type="text" name="zip" minlength="5" maxlength="9" title="ZIP code (#####)"></td>
 					<td><font size = 5>Phone Number:  </font></td>
 					<td><input type="tel" id="phone" name="phone" maxlength="12" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
 					    <label>(###-###-####)</td>
