added css style sheet to html files

--- a/user_info.html
+++ b/user_info.html
@@ -5,7 +5,7 @@
      <head>
         <meta charset="UTF-8">
         <title>User Information</title>
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="styleshee  t">
     </head>
     
