--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Checkout</title>
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
     </head>
     
