Finished adding footer and page alignment

--- a/main_content.html
+++ b/main_content.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-        <h2>E-Commerce Shopping Cart</h2>
-        <h3>Select one of the links from menu to start!</h3>
-    </body>
+        <section id="main-content-text">
+            <h1>Junkyard Inc. Home Page</h1>
+            <h3>Select one of the links from menu to start</h3>
+        </section>
+        </body>
 </html>
