--- a/shipping_information.html
+++ b/shipping_information.html
@@ -8,7 +8,7 @@
         
         <form>
             <fieldset>
-                <legend class="form-name"><h3>Shipping Address</h3></legend>
+                <legend class="form-name"><h3>Shipping Information</h3></legend>
                 
                 <input type="checkbox" name="physicaladdr" id="physical-address">
                 <label for="physical-address">Use Physical Address</label><br><br>
