Added main.js and finished autopopulation -- now we just need to add the html table and whatnot

--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
                     <input type="checkbox" id="authorize" required>
                     <label for="authorize">I agree and authorize the amount to be charged to my credit card.</label>
                 </div><br><br>
-                <input type="submit" value="Submit Order">
+                <input id="checkout-submit" type="submit" value="Submit Order">
             </fieldset>
         </form>
         
