--- a/shipping_information.html
+++ b/shipping_information.html
@@ -48,10 +48,10 @@
                     </select><br><br>
                     
                     <label for="zip">Zip:</label>
-                    <input type="text" maxlength="9" minlength="5" size="7" name="zipcode" id="zip" required>
+                    <input type="text" maxlength="9" minlength="5" size="7" name="zip" id="zip" required>
                     <br><br>
                     
-                    <input type="submit" value="Confirm Address">
+                    <input id="ship-submit" type="submit" value="Confirm Address">
                 </div>
             </fieldset>
         </form>
