--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -7,21 +7,21 @@
             <p>Please select <strong>one item for your car</strong>
                 from the drop-down list to add it to the shopping cart:</p>
 
-            <form action="/>action_page.php">
+            <form>
                 <fieldset>
                     <legend><h3>Auto Parts</h3></legend>
                 <select name="parts">
                     <option value=""></option>
-                    <option value="alternator">alternator ($ 179.00 / piece)</option>
-                    <option value="battery">battery ($ 135.00 / battery)</option>
-                    <option value="brake disc">brake disc ($ 30.00 / disk)
-                    <option value="drive belt">drive belt ($ 10.00 / belt)</option>
-                    <option value="engine oil">engine oil ($ 25.00 / liter)</option>
-                    <option value="floor mats">floor mats ($ 89.00 / set)</option>
-                    <option value="light bulbs">light bulbs ($ 2.00 / bulb)</option>
-                    <option value="spark plug">spark plug ($ 8.00 / plug)</option>
-                    <option value="tires">tires ($ 85.00 / tire)</option>
-                    <option value="windshield wipers">windshield wipers ($ 12.00 / 2-pack)</option>
+                    <option value="alternator">alternator</option>
+                    <option value="battery">battery</option>
+                    <option value="brake disc">brake disc
+                    <option value="drive belt">drive belt</option>
+                    <option value="engine oil">engine oil</option>
+                    <option value="floor mats">floor mats</option>
+                    <option value="light bulbs">light bulbs</option>
+                    <option value="spark plug">spark plug</option>
+                    <option value="tires">tires</option>
+                    <option value="windshield wipers">windshield wipers</option>
                 </select>
 
             <p>
@@ -40,11 +40,10 @@
             </p>
 
             <br><br>
-            <input type="submit">
+            <input id="cart-submit" type="submit">
 
-            </form>
+            
             </fieldset>
-
-        </div>
+            </form>
     </body>
 </html>
