--- a/CS3320Project.html
+++ b/CS3320Project.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Finger+Paint&display=swap" rel="stylesheet">
+         <script type="text/javascript" src="products.json"></script>
+         <script type="text/javascript" src="main.js"></script>
     </head>
 
     <body>
@@ -27,7 +29,7 @@
         
         <section id="sec-two" class="sec">
         <article class="iframe-container">
-            <iframe class="iframe" src="main_content.html" name="contentFrame"></iframe> 
+            <iframe id="main-frm" class="iframe" src="main_content.html" name="contentFrame"></iframe> 
         </article>
         </section>
         
