--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -38,7 +38,36 @@
                 <label for="total-price"><strong>Total Price: </strong></label>
                 <input type="text" size="7" value="$000.00" id="total-price" readonly>
             </p>
-
+            <table id="addTable">
+				<tr>
+					<td><font size = 5>Item: </font></td>
+                    <td><font size = 5>Unit: </font></td>
+                    <td><font size = 5>Price: </font></td>
+				</tr>
+                <tr id="itemRow">
+					
+				</tr>
+				<tr>
+					<td><input type="text" id="item1" name="item1" value="" readonly> </td>
+                    <td><input type="text" id="unit1" name="unit1" value="" readonly> </td>
+                    <td><input type="text" id="price1" name="price1" value="" readonly> </td>
+				</tr>
+				<tr>
+                    <td><input type="text" id="item2" name="item2" value="" readonly> </td>
+                    <td><input type="text" id="unit2" name="unit2" value="" readonly> </td>
+                    <td><input type="text" id="price2" name="price2" value="" readonly> </td>
+				</tr>
+				<tr>
+                    <td><input type="text" id="item3" name="item3" value="" readonly> </td>
+                    <td><input type="text" id="unit3" name="unit3" value="" readonly> </td>
+                    <td><input type="text" id="price3" name="price3" value="" readonly> </td>
+				</tr>
+				<tr>
+					<td><input type="text" id="item4" name="item4" value="" readonly> </td>
+                    <td><input type="text" id="unit4" name="unit4" value="" readonly> </td>
+                    <td><input type="text" id="price4" name="price4" value="" readonly> </td>
+                </tr>
+			</table>
             <br><br>
             <input id="cart-submit" type="submit">
 
