--- a/CS3320Project.html
+++ b/CS3320Project.html
@@ -7,8 +7,9 @@
         <link href="https://fonts.googleapis.com/css?family=Finger+Paint&display=swap" rel="stylesheet">
          <script type="text/javascript" src="products.json"></script>
          <script type="text/javascript" src="main.js"></script>
+         <script id="table-data" type="text/html"></script>
     </head>
-
+    
     <body>
         <section id="sec-one" class="sec">
          <header id="main-header">
