creates Products.php file
ajax code in shopping_cart & user_info html files

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -10,7 +10,8 @@
             <form>
                 <fieldset>
                     <legend><h3>Auto Parts</h3></legend>
-                <select name="parts">
+					<!--  add onchange=getStates(this.value) in line below -->
+                <select name="parts" onchange="getProducts(this.value)">
                     <option value=""></option>
                     <option value="alternator">alternator</option>
                     <option value="battery">battery</option>
