removed "on change"

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -10,8 +10,7 @@
             <form>
                 <fieldset>
                     <legend><h3>Auto Parts</h3></legend>
-					<!--  add onchange=getStates(this.value) in line below -->
-                <select name="parts" onchange="getProducts(this.value)">
+                <select name="parts">
                     <option value=""></option>
                     <option value="alternator">alternator</option>
                     <option value="battery">battery</option>
