--- a/user_info.html
+++ b/user_info.html
@@ -21,8 +21,8 @@
 					<td><font size = 5>City:  </font></td>
 					<td><input type="text" name="city" maxlength="100"></td>
 					<td><font size = 5>State:  </font></td>
-					<!--  add onchange=getStates(this.value) in line below -->
-					<td><select name="state" onchange="showStates(this.value)">
+			
+					<td><select name="state">
 						<option value=""></option>
 					    <option value="AL">AL</option>
 					    <option value="AK">AK</option>
