--- a/shipping_information.html
+++ b/shipping_information.html
@@ -26,25 +26,7 @@
                     <input type="text" name="city" size="15" maxlength="100" id="city" required><br><br>
                     
                     <label for="state">State:</label>
-                    <select name="state" id="state" required>
-                        <option> </option>
-                        <option>AR</option><option>AK</option><option>AZ</option>
-                        <option>AR</option><option>CA</option><option>CO</option>
-                        <option>CT</option><option>DE</option><option>FL</option>
-                        <option>GA</option><option>HI</option><option>ID</option>
-                        <option>IL</option><option>IN</option><option>IA</option>
-                        <option>KS</option><option>KY</option><option>LA</option>
-                        <option>ME</option><option>MD</option><option>MA</option>
-                        <option>MI</option><option>MN</option><option>MS</option>
-                        <option>MO</option><option>MT</option><option>NE</option>
-                        <option>NV</option><option>NH</option><option>NJ</option>
-                        <option>NM</option><option>NY</option><option>NC</option>
-                        <option>ND</option><option>OH</option><option>OK</option>
-                        <option>OR</option><option>PA</option><option>RI</option>
-                        <option>SC</option><option>SD</option><option>TN</option>
-                        <option>TX</option><option>UT</option><option>VT</option>
-                        <option>VA</option><option>WA</option><option>WV</option>
-                        <option>WI</option><option>WY</option>
+                    <select name="state" id="stateDropDown" required>
                     </select><br><br>
                     
                     <label for="zip">Zip:</label>
