added id to product dropdown and corrected ajax code

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -10,7 +10,7 @@
             <form>
                 <fieldset>
                     <legend><h3>Auto Parts</h3></legend>
-                <select name="products">
+                <select name="products"  id="productDropDown">
                     <option value=""></option>
                     <option value="alternator">alternator</option>
                     <option value="battery">battery</option>
