--- a/checkout.html
+++ b/checkout.html
@@ -62,6 +62,7 @@
                     <label for="authorize">I agree and authorize the amount to be charged to my credit card.</label>
                 </div><br><br>
                 <input id="checkout-submit" type="submit" value="Submit Order">
+		<input onClick="location.href='shipping_information.html'" id="previous" type="button" value="Previous">
             </fieldset>
         </form>
         
