--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 				</tr>
 			</table>
 			<br>
-			<input id="login-submit" type="submit">
+			<input onClick="location.href='CS3320Project.html'" id="submit" type="button" value="Submit">
 		</fieldset>
         </form>
             
