--- a/shipping_information.html
+++ b/shipping_information.html
@@ -35,6 +35,8 @@
                     
                     <input id="ship-submit" type="submit" value="Confirm Address">
                 </div>
+                <input onClick="location.href='shopping_cart.html'" id="previous" type="button" value="Previous">
+                <input onClick="location.href='checkout.html'" id="next" type="button" value="Next">
             </fieldset>
         </form>
         
