--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -41,6 +41,8 @@
             <br><br>
 
             <input id="cart-submit" type="submit">
+	    <input onClick="location.href='user_info.html'" id="previous" type="button" value="Previous">
+            <input onClick="location.href='shipping_information.html'" id="next" type="button" value="Next">
 
 
             </fieldset>
