--- a/user_info.html
+++ b/user_info.html
@@ -38,6 +38,7 @@
 			</table>
 			<br>
 			<input id="user-info-submit" type="submit">
+			<input onClick="location.href='shopping_cart.html'" id="next" type="button" value="Next">
 		</fieldset>
         </form>
             
