--- a/CS3320Project.html
+++ b/CS3320Project.html
@@ -18,6 +18,7 @@
                 <nav id="main-nav">
                     <ul>
                         <li class="nav-item"><a href="main_content.html" target="contentFrame">Home</a></li>
+						<li class="nav-item"><a href="login.html" target="contentFrame">Login</a></li>
                         <li class="nav-item"><a href="user_info.html" target="contentFrame">User Information</a></li>
                         <li class="nav-item"><a href="shopping_cart.html" target="contentFrame">Shopping Cart</a></li>
                         <li class="nav-item"><a href="shipping_information.html" target="contentFrame">Shipping Information</a></li>
