--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -36,12 +36,13 @@
                     <th><font size = 5>Unit Price: </font></th>
                     <th><font size = 5>Quantity: </font></th>
 				</tr>
+				<td><input type="button" value="Delete" onclick="deleteRow(this)"></td>
                 <hr>
 			</table>
             <br><br>
 
             <input id="cart-submit" type="submit">
-	    <input onClick="location.href='user_info.html'" id="previous" type="button" value="Previous">
+	    	<input onClick="location.href='user_info.html'" id="previous" type="button" value="Previous">
             <input onClick="location.href='shipping_information.html'" id="next" type="button" value="Next">
 
 
