--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
 				</tr>
 				<tr>
 					<td><font size = 5>Password:  </font></td>
-					<td><input type="text" name="password" maxlength="100"></td>
+					<td><input type="password" name="password" maxlength="100"></td>
 				</tr>
 			</table>
 			<br>
-			<input onClick="location.href='CS3320Project.html'" id="submit" type="button" value="Submit">
+			input onClick="location.href='user_info.html'" id="submit" type="button" value="Submit">
 		</fieldset>
         </form>
             
