php login files

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <body>
-        <form action="get_userCredentials.php" method="get">
+        <form action="login.php" method="get">
 		<fieldset>
                 <legend class="form-name"><h3>Login</h3></legend>
 			    	<table>
