--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -36,7 +36,7 @@
                     <th><font size = 5>Unit Price: </font></th>
                     <th><font size = 5>Quantity: </font></th>
 				</tr>
-				<td><input type="button" value="Delete" onclick="deleteRow(this)"></td>
+				<td><input type="button" value="Delete" onclick="deleteRow(this)"/></td>
                 <hr>
 			</table>
             <br><br>
