--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -18,6 +18,7 @@
                 <input type="number" name="quantity" min="1" max="10">
             </p>
             <button id="add-button" type="button">Add Item</button>
+			<button id="delete-button" type="button">Remove Item</button>
             <p>
                 <label for="unit-price">Unit Price:</label>
                 <input type="text" size="7" value="$000.00" id="unit-price" readonly><br><br>
@@ -35,9 +36,7 @@
 					<th><font size = 5>Item: </font></th>
                     <th><font size = 5>Unit Price: </font></th>
                     <th><font size = 5>Quantity: </font></th>
-				</tr>
-				<td><input type="button" value="Delete" onclick="deleteRow(this)"/></td>
-                <hr>
+				</tr>    
 			</table>
             <br><br>
 
