--- a/user_info.html
+++ b/user_info.html
@@ -3,7 +3,8 @@
 <html lang="en">
         
     <body>
-        <form action="insert_user.php" method="post">
+        <!--<form action="insert_user.php" method="post">-->
+		<form>
 		<fieldset>
                 <legend class="form-name"><h3>User Information</h3></legend>
 			    <table>
